style.css
/* General styles */
*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  overflow-y: scroll;
  overflow-x: hidden;
}
body {
  min-height: 100vh;
  font-family: "Roboto", sans-serif;
  background-color: white;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  position: relative;
  text-align: center;
}

svg {
  width: 1.5rem;
}

img {
  max-width: 20rem;
}

h2 {
  font-family: "Playfair Display", "Times New Roman", Times, serif;
  color: black;
  font-weight: 200;
  margin: 0.9rem 0;
  font-size: 2rem;
}

.content-container {
  padding: 0 1.5rem;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Header */
header,
footer {
  display: flex;
  flex-direction: column;
  background: #098fb0;
  color: white;
  position: relative;
  z-index: 1;
}

header::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #ffffff;
  clip-path: polygon(-250% 100%, 100% 20%, 100% 100%);
  z-index: -1;
}

.image-container {
  margin-top: 1rem;
  width: 100%;
  position: relative;
}

#profile-image {
  width: 100%;
  aspect-ratio: 3 / 4;
  background-image: url("images/portrait.webp");
  background-size: cover;
  background-position: center;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

#name {
  position: absolute;
  left: 50%;
  bottom: -2%;
  transform: translateX(-50%);
  margin: 0;
  color: #fff;
  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
  font-family: "Playfair Display", serif;
  font-size: 3rem;
  text-align: left;
}

.about-container {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  margin-bottom: 2rem;
  }

.about-container p,
.project-description p {
  margin: 0;
  margin-bottom: 0.9rem;
  font-size: 0.9rem;
  color: rgba(0, 0, 0, 0.75);
  text-align: left;
}

.about-container p{
    letter-spacing: 1px;
}

.about-container .social-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.social-container svg {
  width: 1.3rem;
}

/* Portfolio */
.projects-container {
  display: flex;
  flex-wrap: row;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3rem;
  margin-bottom: 5rem;
}
.project-card {
  max-width: 320px;
  height: 22rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

.card-one .card-image-container {
  background-color: #7b68c4;
}

.card-two .card-image-container {
  background-color: #d89441;
}

.card-three .card-image-container {
  background-color: #6b9656;
}

.card-four .card-image-container {
  background-color: #c75b9b;
}

.card-five .card-image-container {
  background-color: #4fa8c5;
}

.card-six .card-image-container {
  background-color: #76a162;
}

.card-image-container {
  width: 100%;
  height: 60%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Playfair Display", "Times New Roman", Times, serif;
  padding: 4rem;
  background-color: rgb(165, 131, 245);
  color: white;
  font-size: 2rem;
}

.card-info-container {
  height: 40%;
}

.title-social {
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.title-social h3 {
  font-family: "Playfair Display", "Times New Roman", Times, serif;
  font-weight: 200;
  margin-left: 1rem;
}

.title-social-container {
  display: flex;
  gap: 0.6rem;
}

.title-social-container svg {
  width: 1.2rem;
}

.project-description p {
  word-wrap: break-word;
  margin: 0;
  padding: 0 1rem;
  font-size: 0.9rem;
  color: rgba(0, 0, 0, 0.75);
  text-align: left;
}

/* Footer */
.contact-container {
  text-align: left;
}

.contact-container h3 {
  font-family: "Playfair Display", "Times New Roman", Times, serif;
  text-align: center;
  font-weight: 200;
  font-size: 2rem;
  margin: 1rem;
}

.adress {
  margin: 1.5rem 0;
  font-size: 0.8rem;
}

.phone,
.email {
  font-size: 0.8rem;
  margin-bottom: 0.8rem;
}

.phone svg,
.email svg {
  display: none;
}

.footer-social-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-bottom: 2rem;
  
}

.footer-social-container svg {
  width: 1.8rem;
}

#footer-image {
  padding: calc(100% - 1.5rem);
  margin-bottom: 0;
  background-image: url("images/portrait-footer.webp");
  max-width: 100%;
  background-size: cover;
  background-position: center;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

.attribution {

  text-align: center;
  width: 100%;
  padding-bottom: 0.3rem;
  margin-bottom: 2rem;
  font-size: 0.7rem;
  /* position: absolute; */
  bottom: 0;
  left: 0;
  z-index: 1;
}

.attribution a {
  margin-left: 0.3rem;
}

/* Mobile bellow 400px */
@media screen and (min-width: 400px) {
  header .content-container {
    padding: 3rem;
  }

  .content-container {
    padding: 0 4rem;
  }

  .about-container {
    border: 2px solid black;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  }

  /* for the styles bellow remove the unnecesary
  code, after adapt for */
  header,
  footer {
    display: flex;
    flex-direction: column;
    background: #1a9fb5;
    color: white;
    position: relative;
  }

  header::before {
    /* needs adjustment */
    /* needs adjustment */
    clip-path: polygon(-250% 100%, 100% 20%, 100% 100%);
    /* needs adjustment */
    /* needs adjustment */
  }

  .image-container {
    width: 100%;
    position: absolute;
    /* background: #1a9fb5; */
  }

  #profile-image {
    position: relative;
    width: 100%;
    max-width: 15rem;
    top: -5%;
    left: 5%;
    /* max-width: 20rem;          */
    aspect-ratio: 4 / 4;
    /* background-image: url('images/portrait.jpg'); */
    /* background-size: cover; */
    /* background-position: center; */
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  }

  #name {
    position: absolute;
    left: 90%;
    top: -10%;
    width: 100%;
    /* transform: translateX(-50%);  */
    margin: 0;
    color: #fff;
    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
    font-family: "Playfair Display", serif;
    font-size: 3rem;
    text-align: left;
  }

  .about-container {
    display: flex;
    flex-direction: column;
    padding: 1rem;
  }

  .about-container p,
  .project-description p {
    margin: 0;
    margin-bottom: 0.9rem;
    font-size: 1rem;
    color: rgba(0, 0, 0, 0.75);
    text-align: left;
  }

  .about-container .social-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
  }

  .projects-container {
    max-width: 700px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    margin-bottom: 10rem;
  }

  footer > .content-container {
    padding: 2rem;
    flex-direction: row;
    justify-content: space-around;
    gap: 1rem
  }
  #footer-image {
    width: 100%;
    max-width: 250px;
    /* height: 250px;  */
    padding: 0;
    aspect-ratio: 3 / 4;
  }
}

/* Tablet 768 px*/

